po: update po/ko_KR/queue.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/ko_KR/queue.po
+++ b/po/ko_KR/queue.po
@@ -4,12 +4,13 @@
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
 # Josh Kim <joshkkim@gmail.com>, 2014
+# Min-kwon Jo <minkwon007@gmail.com>, 2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:11+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-07-27 11:51+0000\n"
+"Last-Translator: Min-kwon Jo <minkwon007@gmail.com>\n"
 "Language-Team: Korean (Korea) (http://www.transifex.com/civicrm/civicrm/language/ko_KR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -39,4 +40,4 @@ msgstr "대기열 실행자"
 
 #: CRM/Queue/DAO/QueueItem.php
 msgid "Queue ID"
-msgstr ""
+msgstr "대기열 아이디"
