--- a/po/ko_KR/menu.po
+++ b/po/ko_KR/menu.po
@@ -5,13 +5,14 @@
 # Translators:
 # JahyunRyu <koyulka@gmail.com>, 2015
 # Josh Kim <joshkkim@gmail.com>, 2013-2014
+# Min-kwon Jo <minkwon007@gmail.com>, 2016
 # Young Jun Kim <young.j.kim0214@gmail.com>, 2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-07-01 04:54+0000\n"
-"Last-Translator: Young Jun Kim <young.j.kim0214@gmail.com>\n"
+"PO-Revision-Date: 2016-07-27 14:23+0000\n"
+"Last-Translator: Min-kwon Jo <minkwon007@gmail.com>\n"
 "Language-Team: Korean (Korea) (http://www.transifex.com/civicrm/civicrm/language/ko_KR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -71,7 +72,7 @@ msgstr "응답자 예비"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Release Respondents"
-msgstr ""
+msgstr "응답자 공개"
 
 msgctxt "menu"
 msgid "Record Respondents Interview"
@@ -79,7 +80,7 @@ msgstr "응답자 면접 기록"
 
 msgctxt "menu"
 msgid "GOTV (Track Voters)"
-msgstr ""
+msgstr "GOTV(투표자 추적)"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -129,11 +130,11 @@ msgstr "사례 활동"
 
 msgctxt "menu"
 msgid "Case Activity Audit"
-msgstr ""
+msgstr "사례별 활동 감사"
 
 msgctxt "menu"
 msgid "Case Custom Set"
-msgstr ""
+msgstr "사례별 고객 세트"
 
 msgctxt "menu"
 msgid "Case"
@@ -149,7 +150,7 @@ msgstr "다른 클라이언트에게 할당"
 
 msgctxt "menu"
 msgid "File on Case"
-msgstr ""
+msgstr "사례 파일"
 
 msgctxt "menu"
 msgid "Case Details"
@@ -163,7 +164,7 @@ msgstr "사례 유형"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Redaction Rules"
-msgstr ""
+msgstr "교정 규칙"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -172,7 +173,7 @@ msgstr "사례 상태"
 
 msgctxt "menu"
 msgid "Encounter Mediums"
-msgstr ""
+msgstr "만남 수단"
 
 msgctxt "menu"
 msgid "CiviContribute Dashboard"
@@ -269,7 +270,7 @@ msgstr "사용 가능한 신용카드"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Soft Credit Types"
-msgstr ""
+msgstr "소프트 신용 유형"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -317,16 +318,16 @@ msgstr "금융 유형 계정"
 
 msgctxt "menu"
 msgid "Accounting Batch"
-msgstr ""
+msgstr "회계 일괄 처리건"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Accounting Batches"
-msgstr ""
+msgstr "회계 일괄 처리건"
 
 msgctxt "menu"
 msgid "Accounting Batch Export"
-msgstr ""
+msgstr "회계 일괄 처리 내보내기"
 
 msgctxt "menu"
 msgid "View Payment"
@@ -335,7 +336,7 @@ msgstr "지불 "
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "CiviContribute Component Settings"
-msgstr ""
+msgstr "CiviContribute 구성요소 설정"
 
 msgctxt "menu"
 msgid "PDF Invoice"
@@ -459,7 +460,7 @@ msgstr "개인별 호칭 (Ms, Mr...)"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Individual Suffixes (Jr, Sr...)"
-msgstr ""
+msgstr "개인별 호칭 (Jr, Sr...)"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -859,7 +860,7 @@ msgstr "tㅡ마트 그룹"
 
 msgctxt "menu"
 msgid "Sunlight"
-msgstr ""
+msgstr "햇빛"
 
 msgctxt "menu"
 msgid "Notes"
@@ -883,11 +884,11 @@ msgstr "CiviCRM 블로그"
 
 msgctxt "menu"
 msgid "CiviCRM Getting Started"
-msgstr ""
+msgstr "CiviCRM 시작하기"
 
 msgctxt "menu"
 msgid "Case Dashlet"
-msgstr ""
+msgstr "사례 대시렛"
 
 msgctxt "menu"
 msgid "All Cases Dashlet"
@@ -905,7 +906,7 @@ msgstr "중복 연락처 찾기 및 병합"
 
 msgctxt "menu"
 msgid "Dedupe Exceptions"
-msgstr ""
+msgstr "중복제거 예외"
 
 msgctxt "menu"
 msgid "Add User"
@@ -998,15 +999,15 @@ msgstr "일괄 데이터 입력"
 
 msgctxt "menu"
 msgid "QUnit"
-msgstr ""
+msgstr "큐구성단위"
 
 msgctxt "menu"
 msgid "ProfileEditor"
-msgstr ""
+msgstr "프로파일 에디터"
 
 msgctxt "menu"
 msgid "Confirm dates"
-msgstr ""
+msgstr "날짜 확인"
 
 msgctxt "menu"
 msgid "CiviCRM Profile Create"
@@ -1075,7 +1076,7 @@ msgstr "행사 명찰 "
 
 msgctxt "menu"
 msgid "Conference Slot Labels"
-msgstr ""
+msgstr "회의 슬롯 라벨"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1104,11 +1105,11 @@ msgstr "행사 온라인 등록"
 
 msgctxt "menu"
 msgid "Repeat Event"
-msgstr ""
+msgstr "반복 사건"
 
 msgctxt "menu"
 msgid "Conference Slots"
-msgstr ""
+msgstr "회의 슬롯"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1123,7 +1124,7 @@ msgstr "참가자 가져오기"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Manage Price Sets"
-msgstr ""
+msgstr "가격 세트 관리"
 
 msgctxt "menu"
 msgid "Add Event To Cart"
@@ -1338,7 +1339,7 @@ msgstr "CiviCRM 뉴스"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Getting Started"
-msgstr ""
+msgstr "시작하기"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1478,12 +1479,12 @@ msgstr "단체 SMS 찾기"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "New A/B Test"
-msgstr ""
+msgstr "새 A/B 테스트"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Manage A/B Tests"
-msgstr ""
+msgstr "A/B 테스트 관리"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1518,7 +1519,7 @@ msgstr "캠페인 보고서"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "GOTV (Voter Tracking)"
-msgstr ""
+msgstr "GOTV (투표자 현황)"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1588,7 +1589,7 @@ msgstr "보내는 사람 이메일 주소"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Localization"
-msgstr ""
+msgstr "현지화"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1613,7 +1614,7 @@ msgstr "시스템 설정"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Connections"
-msgstr ""
+msgstr "연결"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1653,7 +1654,7 @@ msgstr "Civi사례"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Encounter Medium"
-msgstr ""
+msgstr "만남 수단"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1765,7 +1766,7 @@ msgctxt "menu"
 msgid ""
 "Provides a list of address and telephone information for constituent records"
 " in your system."
-msgstr ""
+msgstr "시스템상의 구성원 레코드를 위해 주소와 전화번호 정보 목록을 제공합니다."
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1777,14 +1778,14 @@ msgctxt "menu"
 msgid ""
 "Provides contact-related information on contributions, memberships, events "
 "and activities."
-msgstr ""
+msgstr "성금, 회원, 사건과 활동들과 관련된 연락처 정보를 제공합니다."
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid ""
 "Provides a list of constituent activity including activity statistics for "
 "one/all contacts during a given date range(required)"
-msgstr ""
+msgstr "주어진 기간 동안의 하나 또는 모든 연락처에 대한 활동 통계를 포함한 구성원의 활동 목록을 제공합니다.(필수)"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1796,12 +1797,12 @@ msgctxt "menu"
 msgid ""
 "Provides detail list of employer employee relationships along with "
 "employment details."
-msgstr ""
+msgstr "취업 정보와 함께 고용주 직원 관계의 자세한 목록을 제공합니다."
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Gives relationship details between two contacts"
-msgstr ""
+msgstr "두 연락처 사이의 자세한 관계를 제공합니다."
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1813,7 +1814,7 @@ msgctxt "menu"
 msgid ""
 "Groups and totals contributions by criteria including contact, time period, "
 "contribution type, contributor location, etc."
-msgstr ""
+msgstr "연락처, 기간, 기부 종류, 기부자 위치 등을 포함한 기준으로 분류하고 합계를 냅니다."
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1826,7 +1827,7 @@ msgid ""
 "Lists specific contributions by criteria including contact, time period, "
 "contribution type, contributor location, etc. Contribution summary report "
 "points to this report for contribution details."
-msgstr ""
+msgstr "연락, 기간, 기부 종류, 기부자 위치 등을 포함한 기준에 의한 특정 기부들을 나열합니다. 기부 요약 보고서는 기부 세부사항을 위해 이 보고서를 참조할 것입니다."
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1839,12 +1840,12 @@ msgid ""
 "Given two date ranges, shows contacts who contributed in both the date "
 "ranges with the amount contributed in each and the percentage increase / "
 "decrease."
-msgstr ""
+msgstr "주어진 두 기간에 기부한 사람의 연락 내용과 함께 기부한 양과 각각 증가 또는 감소한 비중을 보여줍니다."
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "SYBUNT (some year but not this year)"
-msgstr ""
+msgstr "SYBUNT (올해는 아니지만 언젠가는)"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1852,7 +1853,7 @@ msgid ""
 "Some year(s) but not this year. Provides a list of constituents who donated "
 "at some time in the history of your organization but did not donate during "
 "the time period you specify."
-msgstr ""
+msgstr "올해는 아니지만 언젠가는. 당신이 정한 기간에는 기부하지 않았지만 당신의 단체의 역사 어느 한 시점에 기부한 사람의 목록을 제공합니다."
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1865,7 +1866,7 @@ msgid ""
 "Last year but not this year. Provides a list of constituents who donated "
 "last year but did not donate during the time period you specify as the "
 "current year."
-msgstr ""
+msgstr "올해가 아닌 작년. 작년에는 기부했지만 올해 당신이 지정한 기간에는 기부하지 않은 구성원을 제공합니다."
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1877,7 +1878,7 @@ msgctxt "menu"
 msgid ""
 "Displays a detailed list of contributions grouped by organization, which "
 "includes contributions made by employees for the organisation."
-msgstr ""
+msgstr "기관으로 한 기부의 자세한 사항을 표시하세요. 이는 조직의 직원에 의해 만들어진 기부도 포함합니다."
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1889,7 +1890,7 @@ msgctxt "menu"
 msgid ""
 "Displays a detailed list of contributions grouped by household which "
 "includes contributions made by members of the household."
-msgstr ""
+msgstr "가정으로 한 기부의 자세한 사항을 표시하세요. 이는 가정의 일원으로서 한 기부도 포함합니다."
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1901,19 +1902,19 @@ msgctxt "menu"
 msgid ""
 "Provides a list of the top donors during a time period you define. You can "
 "include as many donors as you want (for example, top 100 of your donors)."
-msgstr ""
+msgstr "당신이 정한 기간 안에 가장 많이 기부한 사람의 목록을 입력하세요. 당신이 원하는 만큼 입력할 수 있습니다. (예를 들어, 상위 100인의 기부자)"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Soft Credits"
-msgstr ""
+msgstr "소프트 신용"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid ""
 "Shows contributions made by contacts that have been soft-credited to other "
 "contacts."
-msgstr ""
+msgstr "다른 연락처에 소프트 적립된 연락에 의해 만들어진 기부들을 입력하세요."
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1925,7 +1926,7 @@ msgctxt "menu"
 msgid ""
 "List contact's donation history, grouped by year, along with contributions "
 "attributed to any of the contact's related contacts."
-msgstr ""
+msgstr "연락과 관련된 다른 연락에서 기인한 기부와 함께 년 단위로 묶어서 연락처의 기부 기록을 나열합니다."
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1937,7 +1938,7 @@ msgctxt "menu"
 msgid ""
 "Summarizes amount raised and number of contributors for each Personal "
 "Campaign Page."
-msgstr ""
+msgstr "개인 캠페인 페이지마다 기부자의 수와 상승한 양을 요약합니다."
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1949,7 +1950,7 @@ msgctxt "menu"
 msgid ""
 "Summary of pledges including amount pledged, pledge status, next payment "
 "date, balance due, total amount paid etc."
-msgstr ""
+msgstr "서약한 양, 서약 상태, 다음 지불 날짜, 차감 부족액, 총 지불액 등을 포함한 서약의 요약"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1971,12 +1972,12 @@ msgctxt "menu"
 msgid ""
 "Provides transaction details for all contributions and payments, including "
 "Transaction #, Invoice ID, Payment Instrument and Check #."
-msgstr ""
+msgstr "모든 기부와 지불의 거래 세부사항을 제공합니다. 거래 세부사항에는 거래 번호, 송장 아이디, 지불 방법과 체크 번호를 포함합니다."
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Provides information about the status of recurring contributions"
-msgstr ""
+msgstr "반복되는 기부의 상태에 관한 정보를 제공합니다."
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1986,7 +1987,7 @@ msgstr "멤버십 요약"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Provides a summary of memberships by type and join date."
-msgstr ""
+msgstr "회원 종류와 가입일에 따른 회원의 요약을 제공합니다."
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1999,7 +2000,7 @@ msgid ""
 "Provides a list of members along with their membership status and membership"
 " details (Join Date, Start Date, End Date). Can also display contributions "
 "(payments) associated with each membership."
-msgstr ""
+msgstr "멤버의 리스트를 제공합니다. 리스트에는 회원 상태와 회원 상세정보(가입일, 시작일, 종료일)를 포함합니다. 기부(지불)과 관련된 각각의 회원들도 표시할 수 있습니다."
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -2012,7 +2013,7 @@ msgid ""
 "Contribution details for any type of contribution, plus associated "
 "membership information for contributions which are in payment for "
 "memberships."
-msgstr ""
+msgstr "기부의 유형에 의한 회원정보. 회원에 대한 지불 기여와 관련된 회원 정보도 포함."
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -2024,7 +2025,7 @@ msgctxt "menu"
 msgid ""
 "Provides a list of memberships that have lapsed or will lapse by the date "
 "you specify."
-msgstr ""
+msgstr "당신이 정한 날짜가 지났거나 지나게 될 회원들의 리스트를 제공합니다."
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -2042,7 +2043,7 @@ msgid ""
 "Provides an overview of event income. You can include key information such "
 "as event ID, registration, attendance, and income generated to help you "
 "determine the success of an event."
-msgstr ""
+msgstr "이벤트 소득의 개요를 제공합니다. 당신은 이벤트 아이디, 등록, 출석 그리고 당신의 이벤트의 성공을 결정할 수입의 생성과 같은 중요한 정보를 포함할 수 있습니다."
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -2054,7 +2055,7 @@ msgctxt "menu"
 msgid ""
 "Helps you to analyze the income generated by an event. The report can "
 "include details by participant type, status and payment method."
-msgstr ""
+msgstr "당신이 이벤트로 인해 생성된 수입을 분석하는 것을 도와줍니다. 보고서는 참여자 종류, 상태 그리고 지불 방법과 같은 상세정보를 포함합니다."
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -2136,7 +2137,7 @@ msgctxt "menu"
 msgid ""
 "Provides reporting on Intended and Successful Deliveries, Unsubscribes and "
 "Opt-outs, Replies and Forwards."
-msgstr ""
+msgstr "성공적인 배달, 구독 취소와 탈퇴, 회신 및 전달 등으로 구성된 보고서를 제공합니다."
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -2147,7 +2148,7 @@ msgstr "질의응답 상세내용"
 msgctxt "menu"
 msgid ""
 "Detailed report for canvassing, phone-banking, walk lists or other surveys."
-msgstr ""
+msgstr "유세, 폰뱅킹, 도보 목록 또는 다른 설문조사 등의 자세한 보고서"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -2156,11 +2157,11 @@ msgstr "결제방법"
 
 msgctxt "menu"
 msgid "Configure CKEditor"
-msgstr ""
+msgstr "CKEditor 구성"
 
 msgctxt "menu"
 msgid "Batch Merge Duplicate Contacts"
-msgstr ""
+msgstr "중복된 연락처 병합 일괄처리"
 
 msgctxt "menu"
 msgid "Insert CiviCRM Content"
@@ -2168,11 +2169,11 @@ msgstr "CiviCRM 컨텐츠 입력"
 
 msgctxt "menu"
 msgid "Self-service Registration Update"
-msgstr ""
+msgstr "자급식 등록 업데이트"
 
 msgctxt "menu"
 msgid "Self-service Registration Transfer"
-msgstr ""
+msgstr "자급식 등록 전송"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -2182,12 +2183,12 @@ msgstr "시스템 상태"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Components"
-msgstr ""
+msgstr "구성요소"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Extensions"
-msgstr ""
+msgstr "확장 기능"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -2207,11 +2208,11 @@ msgstr "유형/날짜에 의한 활동 내역 보기"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Pledge Detail"
-msgstr ""
+msgstr "서약 세부사항"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid ""
 "List of pledges including amount pledged, pledge status, next payment date, "
 "balance due, total amount paid etc."
-msgstr ""
+msgstr "서약 목록. 서약 양, 서약 상태, 다음 지불 일자, 차감 부족액, 총 지불액 등을 포함합니다."
