--- a/po/ta/common-components.po
+++ b/po/ta/common-components.po
@@ -3,13 +3,14 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
+# Alagappan Karthikeyan <me@karthik.sg>, 2016
 # rajeshs <rajesh@millertech.co.uk>, 2013
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:37+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-07-27 18:10+0000\n"
+"Last-Translator: Alagappan Karthikeyan <me@karthik.sg>\n"
 "Language-Team: Tamil (http://www.transifex.com/civicrm/civicrm/language/ta/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -20,7 +21,7 @@ msgstr ""
 #: CRM/Admin/Form/CMSUser.php templates/CRM/Financial/Form/Search.tpl
 #: templates/CRM/Financial/Page/BatchTransaction.tpl
 msgid "OK"
-msgstr ""
+msgstr "சரி "
 
 #: CRM/Admin/Form/ContactType.php templates/CRM/Admin/Form/Setting/Url.hlp
 #: CRM/Contribute/Form/ManagePremiums.php
