--- a/po/ta/drupal-civicrm.po
+++ b/po/ta/drupal-civicrm.po
@@ -3,13 +3,14 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
+# Alagappan Karthikeyan <me@karthik.sg>, 2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2011-03-27 21:13+0200\n"
-"PO-Revision-Date: 2015-03-13 21:28+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
-"Language-Team: Tamil (http://www.transifex.com/projects/p/civicrm/language/ta/)\n"
+"PO-Revision-Date: 2016-07-27 18:01+0000\n"
+"Last-Translator: Alagappan Karthikeyan <me@karthik.sg>\n"
+"Language-Team: Tamil (http://www.transifex.com/civicrm/civicrm/language/ta/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -21,7 +22,7 @@ msgstr ""
 msgid ""
 "Add/remove association rules and configure settings. Also perform manual "
 "synchronization."
-msgstr ""
+msgstr "விதிகளை சேர்க்க, நீக்க, அமைப்புகளை கட்டமைக்க மற்றும் கையேடு ஒத்திசைவு செய்ய"
 
 #: drupal/modules/civicrm_group_roles/civicrm_group_roles.module
 #: drupal/modules/civicrm_member_roles/civicrm_member_roles.module
