--- a/po/ta/member.po
+++ b/po/ta/member.po
@@ -3,13 +3,14 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
+# Alagappan Karthikeyan <me@karthik.sg>, 2016
 # rajeshs <rajesh@millertech.co.uk>, 2013
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:10+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-07-27 18:07+0000\n"
+"Last-Translator: Alagappan Karthikeyan <me@karthik.sg>\n"
 "Language-Team: Tamil (http://www.transifex.com/civicrm/civicrm/language/ta/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -19,7 +20,7 @@ msgstr ""
 
 #: CRM/Member/BAO/Membership.php
 msgid "No valid membership status for given dates."
-msgstr ""
+msgstr "கொடுக்கப்பட்டுள்ள தேதிகளில் உறுப்பினர் எவரும் இல்லை"
 
 #: CRM/Member/BAO/Membership.php
 msgid ""
