po: update po/tr_TR/batch.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/tr_TR/batch.po
+++ b/po/tr_TR/batch.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-10 05:12+0000\n"
+"PO-Revision-Date: 2016-07-27 08:02+0000\n"
 "Last-Translator: Kaya Zeren <kayazeren@gmail.com>\n"
 "Language-Team: Turkish (http://www.transifex.com/civicrm/civicrm/language/tr/)\n"
 "MIME-Version: 1.0\n"
@@ -143,7 +143,7 @@ msgstr "Sanal kredi tutarı toplam tutardan büyük olamaz"
 
 #: CRM/Batch/Form/Entry.php
 msgid "Membership type is a required field."
-msgstr "Üyelik tipi alanının doldurulması zorunludur."
+msgstr "Üyelik türü alanının doldurulması zorunludur."
 
 #: CRM/Batch/Form/Entry.php
 msgid "You can not record two payments for the same pledge in a single batch."
@@ -186,7 +186,7 @@ msgid ""
 "You can also Save & Continue Later at any time. Go to Administer > Customize"
 " Data and Screens > Profiles > Reserved Profiles > to add, remove or change "
 "the order of columns."
-msgstr "Tüm toplu işlem ögelerini yazdığınızda aşağıdaki Doğrulayıp Devam Edin düğmesine tıklayın. Ayrıca isteğinize göre istediğiniz zaman Kaydedip Sonra Devam Edebilirsiniz. Sütunları eklemek, çıkarmak ve sıralamasını değiştirmek için Yönetim > Veri Ekranlarını Özelleştirin > Profiller > Ayrılmış Profiller bölümüne bakın."
+msgstr "Tüm toplu işlem ögelerini yazdığınızda aşağıdaki Doğrulayıp Devam Edin düğmesine tıklayın. Ayrıca isteğinize göre istediğiniz zaman Kaydedip Sonra Devam Edebilirsiniz. Sütunları eklemek, çıkarmak ve sıralamasını değiştirmek için Yönetim > Veri ve Ekranları Özelleştirme > Profiller > Ayrılmış Profiller bölümüne bakın."
 
 #: templates/CRM/Batch/Form/Entry.tpl
 msgid "Total amount expected"
@@ -236,7 +236,7 @@ msgstr "VarlıkTopluİşlem Tablosu"
 msgid ""
 "File or Autocomplete-Select type field(s) in the selected profile are not "
 "supported for Update multiple records."
-msgstr "Seçilmiş profil için Dosya ya da Otomatik Seçim alan tiplerinde birden çok kaydın Güncellenmesi desteklenmiyor."
+msgstr "Seçilmiş profil için Dosya ya da Otomatik Seçim alan türlerinde birden çok kaydın Güncellenmesi desteklenmiyor."
 
 #: templates/CRM/Batch/Form/Entry.tpl
 msgid ""
