po: update po/tr_TR/case.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/tr_TR/case.po
+++ b/po/tr_TR/case.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-11 05:14+0000\n"
+"PO-Revision-Date: 2016-07-27 06:31+0000\n"
 "Last-Translator: Kaya Zeren <kayazeren@gmail.com>\n"
 "Language-Team: Turkish (http://www.transifex.com/civicrm/civicrm/language/tr/)\n"
 "MIME-Version: 1.0\n"
@@ -80,7 +80,7 @@ msgid ""
 "You can not delete this case type -- it is assigned to %1 existing case "
 "record(s). If you do not want this case type to be used going forward, "
 "consider disabling it instead."
-msgstr "%1 varolan olay kaydına atanmış olduğundan bu işlem tipini silemezsiniz. Bu olay tipini kullanmayacaksınız silmek yerine devre dışı bırakmayı düşünün."
+msgstr "%1 varolan olay kaydına atanmış olduğundan bu işlem türünü silemezsiniz. Bu olay türünü kullanmayacaksanız silmek yerine devre dışı bırakmayı düşünün."
 
 #: CRM/Case/BAO/Query.php
 msgid "Case %1 My Cases"
@@ -116,7 +116,7 @@ msgstr "Zamanlanmış İşlem Tarihi %1 %2"
 
 #: CRM/Case/BAO/Query.php
 msgid "Activity Type %1 %2"
-msgstr "İşlem Tipi %1 %2"
+msgstr "İşlem Türü %1 %2"
 
 #: CRM/Case/BAO/Query.php
 msgid "Activity Duration %1 %2"
@@ -160,31 +160,31 @@ msgstr "Olay Çöp Kutusunda"
 
 #: CRM/Case/DAO/CaseType.php
 msgid "Case Type ID"
-msgstr "Olay Tipi Kodu"
+msgstr "Olay Türü Kodu"
 
 #: CRM/Case/DAO/CaseType.php
 msgid "Case Type Name"
-msgstr "Olay Tipi Adı"
+msgstr "Olay Türü Adı"
 
 #: CRM/Case/DAO/CaseType.php
 msgid "Case Type Title"
-msgstr "Olay Tipi Başlığı"
+msgstr "Olay Türü Başlığı"
 
 #: CRM/Case/DAO/CaseType.php
 msgid "Case Type Description"
-msgstr "Olay Tipi Açıklaması"
+msgstr "Olay Türü Açıklaması"
 
 #: CRM/Case/DAO/CaseType.php
 msgid "Case Type Is Active"
-msgstr "Olay Tipi Etkin"
+msgstr "Olay Türü Etkin"
 
 #: CRM/Case/DAO/CaseType.php
 msgid "Case Type Is Reserved"
-msgstr "Olay Tipi Ayrılmış"
+msgstr "Olay Türü Ayrılmış"
 
 #: CRM/Case/DAO/CaseType.php
 msgid "Case Type Definition"
-msgstr "Olay Tipi Tanımı"
+msgstr "Olay Türü Tanımı"
 
 #: CRM/Case/Form/Activity/ChangeCaseStartDate.php
 #: CRM/Case/Form/Activity/ChangeCaseStatus.php
@@ -196,7 +196,7 @@ msgstr "Olay Kodu bulunamadı."
 #: CRM/Case/Form/Activity/ChangeCaseStartDate.php
 #: CRM/Case/Form/Activity/LinkCases.php
 msgid "Expected one case-type"
-msgstr "Bir olay tipi bekleniyor"
+msgstr "Bir olay türü bekleniyor"
 
 #: CRM/Case/Form/Activity/ChangeCaseStartDate.php
 msgid "New Start Date"
@@ -216,7 +216,7 @@ msgstr "Olay durumu değiştirildi"
 
 #: CRM/Case/Form/Activity/ChangeCaseType.php ang/crmCaseType/list.html
 msgid "New Case Type"
-msgstr "Yeni Olay Tipi"
+msgstr "Yeni Olay Türü"
 
 #: CRM/Case/Form/Activity/ChangeCaseType.php
 msgid "Reset Case Timeline?"
@@ -232,7 +232,7 @@ msgstr "%1 olay durumu %2 olarak değiştirildi"
 
 #: CRM/Case/Form/Activity/ChangeCaseType.php
 msgid "Case Type changed successfully."
-msgstr "Olay tipi değiştirildi."
+msgstr "Olay türü değiştirildi."
 
 #: CRM/Case/Form/Activity/LinkCases.php
 msgid "Link To Case"
@@ -252,7 +252,7 @@ msgstr "Olay açıldı"
 
 #: CRM/Case/Form/Activity.php
 msgid "You do not have any active Case Types"
-msgstr "Herhangi bir etkin olay tipiniz yok"
+msgstr "Herhangi bir etkin olay türünüz yok"
 
 #: CRM/Case/Form/Activity.php
 msgid "You can not add another '%1' activity to this case. %2"
@@ -310,7 +310,7 @@ msgid ""
 "The Open Case activity type is missing or disabled. Please have your site "
 "administrator check Administer > Option Lists > Activity Types for the "
 "CiviCase component."
-msgstr "Açık Olay işlem tipi eksik ya da devre dışı bırakılmış. Lütfen site yöneticinizi CiviCase bileşenindeki Yönetim > Seçenek Listeleri > İşlem Tipleri bölümünü denetlemesi için bilgilendirin."
+msgstr "Açık Olay işlem türü eksik ya da devre dışı bırakılmış. Lütfen site yöneticinizi CiviCase bileşenindeki Yönetim > Seçenek Listeleri > İşlem Türleri bölümünü denetlemesi için bilgilendirin."
 
 #: CRM/Case/Form/Case.php
 msgid "Client contact does not exist: %1"
@@ -363,7 +363,7 @@ msgstr "Birleştirilecek Olayı Seçin"
 
 #: CRM/Case/Form/CaseView.php
 msgid "- select type -"
-msgstr "- seçim tipi -"
+msgstr "- seçim türü -"
 
 #: CRM/Case/Form/CaseView.php
 msgid "Activities from the %1 activity set have been added to this case."
@@ -539,24 +539,24 @@ msgstr "Olayları Verin"
 
 #: CRM/Case/XMLProcessor/Process.php
 msgid "Configuration file could not be retrieved for case type = '%1' %2."
-msgstr "Şu olay tipi için ayar dosyası alınamadı = '%1' %2."
+msgstr "Şu olay türü için ayar dosyası alınamadı = '%1' %2."
 
 #: CRM/Case/XMLProcessor/Process.php
 msgid ""
 "Unable to load configuration file for the referenced case type: '%1' %2."
-msgstr "Belirtilen olay tipi için ayar dosyası yüklenemedi = '%1' %2."
+msgstr "Belirtilen olay türü için ayar dosyası yüklenemedi = '%1' %2."
 
 #: CRM/Case/XMLProcessor/Process.php
 msgid ""
 "Relationship type %1, found in case configuration file, is not present in "
 "the database %2"
-msgstr "Ayar dosyasında bulunan %1  ilişki tipi %2 veritabanı içinde bulunamadı"
+msgstr "Ayar dosyasında bulunan %1  ilişki türü %2 veritabanı içinde bulunamadı"
 
 #: CRM/Case/XMLProcessor/Process.php
 msgid ""
 "Activity type %1, found in case configuration file, is not present in the "
 "database %2"
-msgstr "Ayar dosyasında bulunan %1  işlem tipi %2 veritabanı içinde bulunamadı"
+msgstr "Ayar dosyasında bulunan %1  işlem türü %2 veritabanı içinde bulunamadı"
 
 #: CRM/Case/xml/configuration.sample/case_sample.mysql.tpl
 msgid "Housing Support"
@@ -608,11 +608,11 @@ msgstr "En Fazla Kopya"
 
 #: ang/crmCaseType/activityTypesTable.html
 msgid "Add activity type"
-msgstr "İşlem tipi ekleyin"
+msgstr "İşlem türü ekleyin"
 
 #: ang/crmCaseType/caseTypeDetails.html
 msgid "WARNING: The case type name includes deprecated characters."
-msgstr "Uyarı: Olay tipi adında artık kullanılmayan karakterler bulunuyor."
+msgstr "Uyarı: Olay türü adında artık kullanılmayan karakterler bulunuyor."
 
 #: ang/crmCaseType/caseTypeDetails.html
 msgid ""
@@ -624,7 +624,7 @@ msgstr "Uyarı: eski \"Adı\" kullanan dış dosya ya da programlar varsa, bunla
 msgid ""
 "Use this screen to define or update the Case Roles, Activity Types, and "
 "Timelines for a case type."
-msgstr "Bir olay tipi için Olay Rolleri, İşlem Tipleri ve Zaman Akışları buradan ayarlanabilir."
+msgstr "Bir olay türü için Olay Rolleri, İşlem Türleri ve Zaman Akışları buradan ayarlanabilir."
 
 #: ang/crmCaseType/edit.html
 msgid "Learn more..."
@@ -649,7 +649,7 @@ msgstr "Sıralama"
 #: ang/crmCaseType/list.html
 msgid ""
 "A Case Type describes a group of related tasks, interactions, or processes."
-msgstr "Bir Olay Tipinde, ilişkili görev, iletişim ya da süreç grupları tanımlanır."
+msgstr "Bir Olay Türünde, ilişkili görev, iletişim ya da süreç grupları tanımlanır."
 
 #: ang/crmCaseType/rolesTable.html
 msgid "Assign to Creator"
@@ -670,7 +670,7 @@ msgstr "Referans"
 #: ang/crmCaseType.js
 msgid ""
 "The CiviCase XML file for this case-type prohibits editing the definition."
-msgstr "Bu olay tipi için CiviCase XML dosyası açıklamanın düzenlenmesini engelliyor."
+msgstr "Bu olay türü için CiviCase XML dosyası açıklamanın düzenlenmesini engelliyor."
 
 #: templates/CRM/Case/Audit/Audit.tpl
 msgid "Incomplete"
@@ -876,7 +876,7 @@ msgstr "Doğum Tarihi"
 
 #: templates/CRM/Case/Form/CaseView.tpl
 msgid "Change case type (creates activity record)"
-msgstr "Olay tipini değiştirin (işlem kaydı oluşturur)"
+msgstr "Olay türünü değiştirin (işlem kaydı oluşturur)"
 
 #: templates/CRM/Case/Form/CaseView.tpl
 msgid "Change case status (creates activity record)"
@@ -1065,11 +1065,11 @@ msgstr "İşlemi düzenleyin"
 
 #: templates/CRM/Case/Page/Tab.tpl
 msgid "Oops, It looks like there are no active case types."
-msgstr "Malesef, etkin olay tipi yok gibi görünüyor."
+msgstr "Maalesef, etkin olay türü yok gibi görünüyor."
 
 #: templates/CRM/Case/Page/Tab.tpl
 msgid "Enable <a href='%1'>case types</a>."
-msgstr "<a href='%1'>Olay tiplerini</a> etkinleştirin."
+msgstr "<a href='%1'>Olay türlerini</a> etkinleştirin."
 
 #: templates/CRM/Case/Page/Tab.tpl
 msgid "This page lists all case records for %1."
@@ -1111,7 +1111,7 @@ msgstr "Olayları silin"
 
 #: CRM/Case/Info.php
 msgid "Define case types, access deleted cases"
-msgstr "Olay tipleri tanımlayın, silinmiş olaylara erişin"
+msgstr "Olay türleri tanımlayın, silinmiş olaylara erişin"
 
 #: CRM/Case/Info.php
 msgid "View and edit only those cases managed by this user"
@@ -1167,7 +1167,7 @@ msgstr "Yardım Uzmanı"
 
 #: ang/crmCaseType/list.html
 msgid "Case Types"
-msgstr "Olay Tipleri"
+msgstr "Olay Türleri"
 
 #: templates/CRM/Case/Form/ActivityTab.tpl
 msgid "Reporter"
