--- a/po/ta/mailing.po
+++ b/po/ta/mailing.po
@@ -3,12 +3,13 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
+# Alagappan Karthikeyan <me@karthik.sg>, 2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:36+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-07-27 18:10+0000\n"
+"Last-Translator: Alagappan Karthikeyan <me@karthik.sg>\n"
 "Language-Team: Tamil (http://www.transifex.com/civicrm/civicrm/language/ta/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -18,7 +19,7 @@ msgstr ""
 
 #: CRM/Mailing/BAO/Mailing.php
 msgid "CiviMail will not send email to a non-existent contact: %1"
-msgstr ""
+msgstr "CiviMail இல்லாத மின்னஞ்சல் தாரருக்கு தகவல் அனுப்பாது : %1"
 
 #: CRM/Mailing/BAO/Mailing.php
 msgid "CiviMail will not send an empty mail body, Skipping: %1"
