po: update po/tr_TR/common-components.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/tr_TR/common-components.po
+++ b/po/tr_TR/common-components.po
@@ -10,7 +10,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-10 05:49+0000\n"
+"PO-Revision-Date: 2016-07-27 07:47+0000\n"
 "Last-Translator: Kaya Zeren <kayazeren@gmail.com>\n"
 "Language-Team: Turkish (http://www.transifex.com/civicrm/civicrm/language/tr/)\n"
 "MIME-Version: 1.0\n"
@@ -31,7 +31,7 @@ msgstr "Görsel İnternet Adresi"
 
 #: CRM/Admin/Form/LabelFormats.php CRM/Badge/Form/Layout.php
 msgid "Font Name"
-msgstr "Yazı Tipi Adı"
+msgstr "Yazı Türü Adı"
 
 #: CRM/Admin/Form/LabelFormats.php CRM/Badge/Form/Layout.php
 msgid "Font Size"
@@ -79,7 +79,7 @@ msgstr "Mali Hesap"
 
 #: CRM/Admin/Form/Options.php CRM/Report/Form/Register.php
 msgid "Selected %1 type has not been deleted."
-msgstr "Seçilmiş %1 tipi silinmedi."
+msgstr "Seçilmiş %1 tür silinmedi."
 
 #: CRM/Admin/Form/Options.php CRM/Report/Form/Register.php
 msgid "The %1 '%2' has been saved."
@@ -120,13 +120,13 @@ msgstr "İşlem Tarihi"
 #: templates/CRM/Admin/Page/RelationshipType.tpl
 #: CRM/Report/Form/Contact/Relationship.php
 msgid "Contact Type A"
-msgstr "Kişi Tipi A"
+msgstr "A Kişi Türü"
 
 #: CRM/Admin/Form/RelationshipType.php
 #: templates/CRM/Admin/Page/RelationshipType.tpl
 #: CRM/Report/Form/Contact/Relationship.php
 msgid "Contact Type B"
-msgstr "Kişi Tipi B"
+msgstr "B Kişi Türü"
 
 #: CRM/Admin/Form/ScheduleReminders.php CRM/Pledge/BAO/Query.php
 #: CRM/Pledge/Form/Pledge.php CRM/Pledge/Form/PledgeView.php
@@ -238,7 +238,7 @@ msgstr "%1 Kullanılsın"
 #: CRM/Admin/Page/Options.php CRM/Campaign/Page/SurveyType.php
 #: CRM/Report/Page/Options.php
 msgid "Delete %1 Type"
-msgstr "%1 Tipini Silin"
+msgstr "%1 Türünü Silin"
 
 #: CRM/Admin/Page/ParticipantStatusType.php CRM/Case/BAO/Case.php
 msgid "Edit Status"
@@ -327,7 +327,7 @@ msgstr "Silinemez"
 
 #: templates/CRM/Admin/Page/Options.hlp ang/crmCaseType/edit.html
 msgid "Activity Types"
-msgstr "İşlem Tipleri"
+msgstr "İşlem Türleri"
 
 #: templates/CRM/Admin/Page/Options.tpl templates/CRM/Report/Page/Options.tpl
 msgid ""
@@ -616,7 +616,7 @@ msgstr "Yalnız Sanal Krediler"
 
 #: CRM/Contribute/DAO/Contribution.php CRM/Financial/DAO/FinancialType.php
 msgid "Financial Type ID"
-msgstr "Mali Tip Kodu"
+msgstr "Mali Tür Kodu"
 
 #: CRM/Contribute/DAO/Contribution.php
 #: templates/CRM/Contribute/Form/Search/ContributionRecur.tpl
@@ -643,7 +643,7 @@ msgstr "Katkı Sayfasının Başlığı"
 #: CRM/Financial/DAO/FinancialTrxn.php CRM/Financial/DAO/PaymentProcessor.php
 #: CRM/Member/Form.php
 msgid "Payment Processor"
-msgstr "Ödeme İşleyici"
+msgstr "Ödeme Aracısı"
 
 #: CRM/Contribute/DAO/ContributionPage.php CRM/Event/DAO/Event.php
 msgid "Pay Later Text"
@@ -849,7 +849,7 @@ msgstr "Her"
 #: CRM/Contribute/Form/Contribution/Main.php
 #: CRM/Event/Form/Registration/Register.php
 msgid "Custom %1 is a required field if %1 is of type Customized."
-msgstr "%1 tipi özelleştirilmiş ise, Özel %1 alanının doldurulması zorunludur."
+msgstr "%1 türü özel ise, Özel %1 alanının doldurulması zorunludur."
 
 #: CRM/Contribute/Form/Contribution.php
 #: templates/CRM/Contribute/Form/ContributionView.tpl
@@ -873,7 +873,7 @@ msgid ""
 "Oops. The membership you're trying to renew appears to be invalid. Contact "
 "your site administrator if you need assistance. If you continue, you will be"
 " issued a new membership."
-msgstr "Malesef, yenilemeye çalıştığınız üyelik geçersiz görünüyor. Yardıma gerek duyuyorsanız site yöneticisi ile görüşün. Devam etmek istiyorsanız, size yeni bir üyelik oluşturulacak."
+msgstr "Maalesef, yenilemeye çalıştığınız üyelik geçersiz görünüyor. Yardıma gerek duyuyorsanız site yöneticisi ile görüşün. Devam etmek istiyorsanız, size yeni bir üyelik oluşturulacak."
 
 #: CRM/Contribute/Form/ContributionBase.php CRM/Event/Page/EventInfo.php
 msgid "The page you requested is currently unavailable."
@@ -970,7 +970,7 @@ msgstr "Katkıyı Yapanın Adı"
 #: CRM/Contribute/Form/Task/Batch.php CRM/Event/Form/Task/Batch.php
 #: CRM/Member/Form/Task/Batch.php
 msgid "Unsupported Field Type"
-msgstr "Desteklenmeyen Alan Tipi"
+msgstr "Desteklenmeyen Alan Türü"
 
 #: CRM/Contribute/Form/Task/Batch.php CRM/Member/Form/Task/Batch.php
 msgid "Your updates have been saved."
@@ -1687,7 +1687,7 @@ msgstr "Vergiden Düşülebilir"
 #: templates/CRM/Contribute/Page/ContributionType.tpl
 #: templates/CRM/Financial/Page/FinancialType.tpl
 msgid "Add Financial Type"
-msgstr "Mali Tip Ekleyin"
+msgstr "Mali Tür Ekleyin"
 
 #: templates/CRM/Contribute/Page/DashBoard.tpl
 #: templates/CRM/Member/Page/MembershipType.tpl
@@ -1972,7 +1972,7 @@ msgstr "Ödeme bilgilerini yazmak için bu seçeneği işaretleyin. Ayrıca öze
 #: templates/CRM/Member/Form/Membership.tpl
 #: templates/CRM/Member/Form/MembershipRenewal.tpl
 msgid "Select the appropriate financial type for this payment."
-msgstr "Bu ödemeye uygun mali tipi seçin."
+msgstr "Bu ödemeye uygun mali türü seçin."
 
 #: templates/CRM/Event/Form/ManageEvent/EventInfo.hlp
 #: ang/crmMailing/BlockMailing.html ang/crmMailingAB/BlockMailing.html
@@ -2011,7 +2011,7 @@ msgstr "Vergi Hariç Tutar:"
 #: CRM/Report/Form/Member/ContributionDetail.php
 #: CRM/Report/Form/Member/Detail.php
 msgid "Payment Type"
-msgstr "Ödeme Tipi"
+msgstr "Ödeme Türü"
 
 #: CRM/Financial/Form/Export.php CRM/Report/Form.php
 msgid "Export to CSV"
@@ -2096,7 +2096,7 @@ msgstr "Red Nedeni"
 
 #: CRM/Mailing/Selector/Event.php CRM/Report/Form/Mailing/Bounce.php
 msgid "Bounce Type"
-msgstr "Red Tipi"
+msgstr "Red Türü"
 
 #: CRM/Mailing/Selector/Event.php templates/CRM/Mailing/Page/Report.tpl
 #: CRM/Report/Form/Register.php templates/CRM/Report/Page/Options.tpl
@@ -2135,7 +2135,7 @@ msgstr "Tıklanma"
 #: CRM/Report/Form/Member/Detail.php CRM/Report/Form/Member/Lapse.php
 #: CRM/Report/Form/Membership/Summary.php
 msgid "Membership Types"
-msgstr "Üyelik Tipleri"
+msgstr "Üyelik Türleri"
 
 #: CRM/Member/Form/Search.php CRM/Report/Form/Member/Lapse.php
 #: CRM/Report/Form/Membership/Summary.php
