po: update po/tr_TR/install.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/tr_TR/install.po
+++ b/po/tr_TR/install.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-10 05:47+0000\n"
+"PO-Revision-Date: 2016-07-27 08:00+0000\n"
 "Last-Translator: Kaya Zeren <kayazeren@gmail.com>\n"
 "Language-Team: Turkish (http://www.transifex.com/civicrm/civicrm/language/tr/)\n"
 "MIME-Version: 1.0\n"
@@ -260,7 +260,7 @@ msgid ""
 "XCache is installed and there are known compatibility issues between XCache "
 "and CiviCRM. Consider using an alternative PHP caching mechanism or disable "
 "PHP caching altogether."
-msgstr "Yüklü olan XCache ile CiviCRM arasında uyumluluk sorunları bulunuyor. Farklı bir PHP önbellek uygulaması kullanmayı ya da PHP önbelleğini devre dışı bırakmayı değerlendirin."
+msgstr "Yüklü olan XCache ile CiviCRM arasında uyumluluk sorunları bulunuyor. Farklı bir PHP ön bellek uygulaması kullanmayı ya da PHP ön belleğini devre dışı bırakmayı değerlendirin."
 
 #: install/index.php
 msgid "Memory allocated (PHP config option 'memory_limit')"
@@ -507,7 +507,7 @@ msgid ""
 "in that language. The initial configuration of the basic data will also be "
 "set to that language (ex: individual prefixes, suffixes, activity types, "
 "etc.). <a href=\"%1\">Learn more about using CiviCRM in other languages.</a>"
-msgstr "CiviCRM kullanıcı topluluğu tarafından pek çok dile çevrilmiştir. Yükleyici dili değiştirilebilir. Başlangıçta yüklenecek temel veriler de bu dilde seçilebilir (özel önekler, sonekler, işlem tipleri vb). <a href=\"%1\">İlgileniyorsanız, diğer dillerde CiviCRM kullanımı hakkındaki bilgilere bakın.</a>"
+msgstr "CiviCRM kullanıcı topluluğu tarafından pek çok dile çevrilmiştir. Yükleyici dili değiştirilebilir. Başlangıçta yüklenecek temel veriler de bu dilde seçilebilir (özel ön ekler, son ekler, işlem türleri vb). <a href=\"%1\">İlgileniyorsanız, diğer dillerde CiviCRM kullanımı hakkındaki bilgilere bakın.</a>"
 
 #: install/template.html
 msgid "Language of basic data:"
