po: update po/tr_TR/grant.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/tr_TR/grant.po
+++ b/po/tr_TR/grant.po
@@ -10,7 +10,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-10 05:47+0000\n"
+"PO-Revision-Date: 2016-07-27 05:52+0000\n"
 "Last-Translator: Kaya Zeren <kayazeren@gmail.com>\n"
 "Language-Team: Turkish (http://www.transifex.com/civicrm/civicrm/language/tr/)\n"
 "MIME-Version: 1.0\n"
@@ -211,7 +211,7 @@ msgstr "Bağış Durumları"
 
 #: templates/CRM/Grant/Form/Search/Common.tpl
 msgid "Grant Type(s)"
-msgstr "Bağış Tipleri"
+msgstr "Bağış Türleri"
 
 #: templates/CRM/Grant/Form/Search/Common.tpl
 msgid "Date is not set"
@@ -225,7 +225,7 @@ msgstr "Kişi adına göre arıyorsanız, yazdığınız ifadeyi denetleyin"
 msgid ""
 "Use this form to find Grant(s) by Contact name, Grant Status, Grant Type, "
 "Total Amount , etc ."
-msgstr "Bu form kullanılarak bağışlar, kişi adı, bağış durumu, bağış tipi, toplam tutar gibi bilgilere göre aranabilir."
+msgstr "Bu form kullanılarak bağışlar, kişi adı, bağış durumu, bağış türü, toplam tutar gibi bilgilere göre aranabilir."
 
 #: templates/CRM/Grant/Form/Selector.tpl
 msgid "List more Grants"
@@ -282,7 +282,7 @@ msgid ""
 "run your own customized searches - click <a href='%1'>Find Grants</a>. You "
 "can search by Contact Name, Amount, Grant type and a variety of other "
 "criteria."
-msgstr "Bu tabloda <strong>Bağış Toplamlarının</strong> bir özeti ve sık kullanılan dönemlere göre bağış ayrıntılarını görüntüleyen kısayollar bulunur. Bağış Durumuna tıklanarak, belirli bir bağış durumundaki kişiler görüntülenebilir. Özel aramalar yapmak için <a href='%1'>Bağış Arama</a> üzerine tıklanarak, kişi adı, tutar, bağış tipi ve değişik ölçütlere göre arama yapılabilir."
+msgstr "Bu tabloda <strong>Bağış Toplamlarının</strong> bir özeti ve sık kullanılan dönemlere göre bağış ayrıntılarını görüntüleyen kısayollar bulunur. Bağış Durumuna tıklanarak, belirli bir bağış durumundaki kişiler görüntülenebilir. Özel aramalar yapmak için <a href='%1'>Bağış Arama</a> üzerine tıklanarak, kişi adı, tutar, bağış türü ve değişik ölçütlere göre arama yapılabilir."
 
 #: templates/CRM/Grant/Page/DashBoard.tpl
 msgid "Number of grants"
