po: update po/tr_TR/pledge.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/tr_TR/pledge.po
+++ b/po/tr_TR/pledge.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-10 05:42+0000\n"
+"PO-Revision-Date: 2016-07-27 06:30+0000\n"
 "Last-Translator: Kaya Zeren <kayazeren@gmail.com>\n"
 "Language-Team: Turkish (http://www.transifex.com/civicrm/civicrm/language/tr/)\n"
 "MIME-Version: 1.0\n"
@@ -59,7 +59,7 @@ msgstr "$%1 - %2 tarihinde"
 #: CRM/Pledge/BAO/PledgeBlock.php
 msgid ""
 "Oops. It looks like there is no valid payment status for online payment."
-msgstr "Malesef çevrimiçi ödeme için geçerli bir ödeme durumu yok gibi görünüyor."
+msgstr "Maalesef çevrimiçi ödeme için geçerli bir ödeme durumu yok gibi görünüyor."
 
 #: CRM/Pledge/BAO/PledgeBlock.php
 msgid "Make Pledge Payment(s):"
@@ -83,7 +83,7 @@ msgstr "Deneme Ödeme Sözü"
 
 #: CRM/Pledge/BAO/Query.php
 msgid "Financial Type - %1"
-msgstr "Mali Tip - %1"
+msgstr "Mali Tür - %1"
 
 #: CRM/Pledge/BAO/Query.php
 msgid "Financial Page - %1"
@@ -460,7 +460,7 @@ msgstr "Ödeme sözü onayı e-postasının gönderildiği tarih."
 
 #: templates/CRM/Pledge/Form/Pledge.tpl
 msgid "Sets the default financial type for payments against this pledge."
-msgstr "Bu ödeme sözü için kullanılacak varsayılan mali tipi belirtir."
+msgstr "Bu ödeme sözü için kullanılacak varsayılan mali türü  belirtir."
 
 #: templates/CRM/Pledge/Form/Pledge.tpl
 msgid ""
