po: update po/tr_TR/event.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/tr_TR/event.po
+++ b/po/tr_TR/event.po
@@ -11,7 +11,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-12 12:58+0000\n"
+"PO-Revision-Date: 2016-07-27 07:53+0000\n"
 "Last-Translator: Kaya Zeren <kayazeren@gmail.com>\n"
 "Language-Team: Turkish (http://www.transifex.com/civicrm/civicrm/language/tr/)\n"
 "MIME-Version: 1.0\n"
@@ -153,7 +153,7 @@ msgstr "İşlemi Tamamlayın"
 
 #: CRM/Event/Cart/Form/Checkout/Payment.php
 msgid "Alternative Payment Type"
-msgstr "Diğer Ödeme Tipi"
+msgstr "Diğer Ödeme Türü"
 
 #: CRM/Event/Cart/Form/Checkout/Payment.php
 msgid "Check No."
@@ -385,7 +385,7 @@ msgstr "Listede Beklemeli"
 
 #: CRM/Event/DAO/ParticipantStatusType.php
 msgid "Participant Status Type ID"
-msgstr "Katılımcı Durumu Tipinin Kodu"
+msgstr "Katılımcı Durumu Türünün Kodu"
 
 #: CRM/Event/DAO/ParticipantStatusType.php
 msgid "Participant Status Label"
@@ -582,7 +582,7 @@ msgstr "İndirim Paketi için en az bir ücret yazmalısınız. İndirim ücretl
 
 #: CRM/Event/Form/ManageEvent/Fee.php
 msgid "Please select financial type."
-msgstr "Lütfen bir mali tip seçin."
+msgstr "Lütfen bir mali tür seçin."
 
 #: CRM/Event/Form/ManageEvent/Fee.php
 msgid "Please enter the fee label for the paid event."
@@ -734,7 +734,7 @@ msgstr "'Onay E-postası Gönderilsin' seçeneği etkinleştirilmiş ise lütfen
 msgid ""
 "Allow multiple registrations from the same email address requires a profile "
 "of type 'Individual'"
-msgstr "Aynı e-posta adresi ile birden çok kez kayıt olunabilsin seçeneği için 'Birey' profil tipi kullanılmalıdır"
+msgstr "Aynı e-posta adresi ile birden çok kez kayıt olunabilsin seçeneği için 'Birey' profil türü kullanılmalıdır"
 
 #: CRM/Event/Form/ManageEvent/Registration.php
 msgid ""
@@ -844,7 +844,7 @@ msgstr "Etkinlik Kaynağı"
 
 #: CRM/Event/Form/Participant.php
 msgid "Please enter the associated Financial Type"
-msgstr "Lütfen ilgili Mali Tipi yazın"
+msgstr "Lütfen ilgili Mali Türü yazın"
 
 #: CRM/Event/Form/Participant.php
 msgid "This contact has already been assigned to this event."
@@ -1104,7 +1104,7 @@ msgstr "Kayıt işleminin başına döndürüldünüz ve yer kalmamış etkinlik
 msgid ""
 "Unfortunately some of your options have now sold out for one or more "
 "participants."
-msgstr "Malesef bazı seçimlerinizde bir ya da bir kaç katılımcı için yer kalmamış."
+msgstr "Maalesef bazı seçimlerinizde bir ya da bir kaç katılımcı için yer kalmamış."
 
 #: CRM/Event/Form/Registration/Confirm.php
 msgid ""
@@ -1130,7 +1130,7 @@ msgstr "Bu etkinlik kaydını görüntüleme izniniz yok. Yardıma gerek duyuyor
 msgid ""
 "Oops, it looks like there are currently no available spaces for the %1 "
 "event."
-msgstr "Malesef, %1 etkinliği için yer kalmamış gibi görünüyor."
+msgstr "Maalesef, %1 etkinliği için yer kalmamış gibi görünüyor."
 
 #: CRM/Event/Form/Registration/ParticipantConfirm.php
 msgid ""
@@ -1317,11 +1317,11 @@ msgstr "Etkinlik ücretlerinden en az bir tanesini seçmelisiniz."
 
 #: CRM/Event/Form/Registration.php
 msgid "Sorry, currently only a single seat is available for this option."
-msgstr "Malesef şu anda bu seçenek için yalnız bir koltuk var."
+msgstr "Maalesef şu anda bu seçenek için yalnız bir koltuk var."
 
 #: CRM/Event/Form/Registration.php
 msgid "Sorry, currently only %1 seats are available for this option."
-msgstr "Malesef, şu anda bu seçenek için yalnız %1 koltuk var."
+msgstr "Maalesef, şu anda bu seçenek için yalnız %1 koltuk var."
 
 #: CRM/Event/Form/Registration.php CRM/Event/Page/EventInfo.php
 msgid ""
@@ -1945,7 +1945,7 @@ msgid ""
 "Message&quot' is displayed when the maximum number of registrations is "
 "reached. Only participants with status types marked as 'counted' are "
 "included when checking if the event is full."
-msgstr "Aksi durumda en fazla kayıt sayısına ulaşıldığında, kayıt bağlantısı gizlenerek &quot;Etkinlik Dolu İletisi&quot; görüntülenir. Etkinliğin doluluğu denetlenirken yalnız 'sayılan' durum tipine sahip kullanıcılar hesaba katılır."
+msgstr "Aksi durumda en fazla kayıt sayısına ulaşıldığında, kayıt bağlantısı gizlenerek &quot;Etkinlik Dolu İletisi&quot; görüntülenir. Etkinliğin doluluğu denetlenirken yalnız 'sayılan' durum türüne sahip kullanıcılar hesaba katılır."
 
 #: templates/CRM/Event/Form/ManageEvent/EventInfo.hlp
 msgid "Event-Full Message"
@@ -2074,7 +2074,7 @@ msgid ""
 "they register online. If using a price set below note that the contribution "
 "record will have this financial type, however line items will be processed "
 "using the actual financial type selected for the price set item."
-msgstr "Çevrimiçi kayıt olan katılımcılar tarafından yapılan ödemelere bu mali atanır. Aşağıda fiyat paketlerinden biri kullanıldığında katkı kaydına bu mali tipin atanacağını unutmayın. Bununla birlikte tek tek satır ögeleri fiyat paketi ögesinde seçilmiş mali tip kullanılarak işlenir."
+msgstr "Çevrimiçi kayıt olan katılımcılar tarafından yapılan ödemelere bu mali atanır. Aşağıda fiyat paketlerinden biri kullanıldığında katkı kaydına bu mali türün atanacağını unutmayın. Bununla birlikte tek tek satır ögeleri fiyat paketi ögesinde seçilmiş mali tür kullanılarak işlenir."
 
 #: templates/CRM/Event/Form/ManageEvent/Fee.tpl
 msgid ""
@@ -2191,7 +2191,7 @@ msgid ""
 "may also need to collect additional information specific to a person's "
 "<strong>participation</strong> in an Event. Examples include meal and/or "
 "volunteer preferences."
-msgstr "Etkinlik kaydı sırasında katılımcılardan ek bilgiler toplamak istiyorsanız, standart ya da uyarlanmış alanlar içeren bir ya da birkaç CiviCRM profili ayarlamanız gerekir. Etkinlik kaydı için genellikle bir e-posta adresi ile katılımcının adı ve soyadı istenir. Ayrıca bu <strong>katılıma</strong> özel bazı bilgiler de toplamak isteyebilirsiniz (yemek, gönüllülük gibi)."
+msgstr "Etkinlik kaydı sırasında katılımcılardan ek bilgiler toplamak istiyorsanız, standart ya da özel alanlar içeren bir ya da birkaç CiviCRM profili ayarlamanız gerekir. Etkinlik kaydı için genellikle bir e-posta adresi ile katılımcının adı ve soyadı istenir. Ayrıca bu <strong>katılıma</strong> özel bazı bilgiler de toplamak isteyebilirsiniz (yemek, gönüllülük gibi)."
 
 #: templates/CRM/Event/Form/ManageEvent/Registration.hlp
 msgid ""
@@ -2199,13 +2199,13 @@ msgid ""
 "can save this screen without selecting a Profile, complete the steps below "
 "and then return to <strong>Manage Events</strong> and select your new "
 "profile."
-msgstr "Bu işlem için zaten bir profil ve uyarlanmış alanlar ayarlamadıysanız, bu sayfayı bir profil seçmeden kaydedebilirsiniz. Aşağıdaki adımları tamamladıktan sonra <strong>Etkinlik Yönetimi</strong> bölümüne giderek yeni profilinizi seçebilirsiniz."
+msgstr "Bu işlem için zaten bir profil ve özel alanlar ayarlamadıysanız, bu sayfayı bir profil seçmeden kaydedebilirsiniz. Aşağıdaki adımları tamamladıktan sonra <strong>Etkinlik Yönetimi</strong> bölümüne giderek yeni profilinizi seçebilirsiniz."
 
 #: templates/CRM/Event/Form/ManageEvent/Registration.hlp
 msgid ""
 "Create a custom field group which is 'Used for' "
 "<strong>Participants</strong>."
-msgstr "Toplamak istediğiniz bilgilere göre <strong>Katılımcılar</strong> 'için kullanılacak' bir uyarlanmış alan grubu oluşturun."
+msgstr "Toplamak istediğiniz bilgilere göre <strong>Katılımcılar</strong> 'için kullanılacak' bir özel alan grubu oluşturun."
 
 #: templates/CRM/Event/Form/ManageEvent/Registration.hlp
 msgid "Add your field(s) this custom field group."
@@ -2472,7 +2472,7 @@ msgid ""
 "Set event title, type (conference, performance etc.), description, start and"
 " end dates, maximum number of participants, and activate the event. Enable "
 "the public participant listing feature."
-msgstr "Etkinlik başlığı, tipi (konferans, sunum gibi), açıklama, başlangıç ve bitiş tarihleri, en fazla katılımcı sayısını belirtebilir ve etkinliği yayınlayıp, herkese açık listeleme özelliğini etkinleştirebilirsiniz."
+msgstr "Etkinlik başlığı, türü (konferans, sunum gibi), açıklama, başlangıç ve bitiş tarihleri, en fazla katılımcı sayısını belirtebilir ve etkinliği yayınlayıp, herkese açık listeleme özelliğini etkinleştirebilirsiniz."
 
 #: templates/CRM/Event/Form/ManageEvent/Tab.hlp
 msgid "Set event location and event contact information (email and phone)."
@@ -2538,7 +2538,7 @@ msgid ""
 "created or updated and participant and contribution records will be saved to"
 " the database. Use obvious test contact names so you can review and delete "
 "these records as needed.</strong>"
-msgstr "Uyarlanmış alanları, onay ve teşekkürler sayfalarını ve alındıyı içerecek şekilde tüm kayıt işlemini deneyin Yapılan işlemler ödeme aracısının deneme sunucusuna gönderilecek. <strong>Gerçek bir ödeme işlemi yapılmayacak. Bununla birlikte bir kişi kaydı oluşturulacak ya da güncellenecek ve veritabanına bir deneme katılımcı kaydı eklenecek. Bu nedenle açıkca belli olan ve bu kayıtları kolayca bulup silmenize yardımcı olacak deneme kişi adları kullanın.</strong>"
+msgstr "Özel alanları, onay ve teşekkürler sayfalarını ve alındıyı içerecek şekilde tüm kayıt işlemini deneyin Yapılan işlemler ödeme aracısının deneme sunucusuna gönderilecek. <strong>Gerçek bir ödeme işlemi yapılmayacak. Bununla birlikte bir kişi kaydı oluşturulacak ya da güncellenecek ve veritabanına bir deneme katılımcı kaydı eklenecek. Bu nedenle açıkca belli olan ve bu kayıtları kolayca bulup silmenize yardımcı olacak deneme kişi adları kullanın.</strong>"
 
 #: templates/CRM/Event/Form/ManageEvent/Tab.hlp
 msgid "live"
@@ -2549,7 +2549,7 @@ msgid ""
 "Review your customized <strong>LIVE</strong> online event registration page "
 "here. Use the following URL in links and buttons on any website to send "
 "visitors to this live page"
-msgstr "Uyarlanmış <strong>CANLI</strong> çevrimiçi etkinlik kayıt sayfanızı buradan gözden geçirebilirsiniz. Web sitelerinde bu sayfaya gelmesini istediğiniz ziyaretçilere sunulacak bağlantı ve düğmeler için şu İnternet adresini kullanın:"
+msgstr "İsteğinize göre uyarlanmış <strong>CANLI</strong> çevrimiçi etkinlik kayıt sayfanızı buradan gözden geçirebilirsiniz. Web sitelerinde bu sayfaya gelmesini istediğiniz ziyaretçilere sunulacak bağlantı ve düğmeler için şu İnternet adresini kullanın:"
 
 #: templates/CRM/Event/Form/ManageEvent/Tab.tpl
 #: templates/CRM/Event/Page/ManageEvent.tpl
@@ -3014,7 +3014,7 @@ msgid ""
 " found in the CiviEvent section of the Administer CiviCRM screen. You can "
 "also import Fee Level, Registration Date and any other standard or custom "
 "Participant fields."
-msgstr "Rol için bir değer belirtilmemiş ise etkinliğin varsayılan Katılımcı Rolü (genellikle Katılımcı) kullanılır. Durum ve rol için geçerli değerler Yönetim > CiviEvent bölümünde bulunabilir. Ayrıca Ücret Düzeyi, Kayıt Tarihi ve diğer standart ya da uyarlanmış alanlardaki veriler alınabilir."
+msgstr "Rol için bir değer belirtilmemiş ise etkinliğin varsayılan Katılımcı Rolü (genellikle Katılımcı) kullanılır. Durum ve rol için geçerli değerler Yönetim > CiviEvent bölümünde bulunabilir. Ayrıca Ücret Düzeyi, Kayıt Tarihi ve diğer standart ya da özel alanlardaki veriler alınabilir."
 
 #: templates/CRM/Event/Import/Form/DataSource.hlp
 msgid "Contact Records for Event Participants"
@@ -3065,7 +3065,7 @@ msgid ""
 "For each import, you can either INSERT new event registration (participant) "
 "records, or UPDATE existing records. You can not do both types of operations"
 " in a single import session."
-msgstr "Her bir alma işleminde hem yeni etkinlik (katılımcı) kayıtları EKLENEBİLİR hem de varolan kayıtlar GÜNCELLENEBİLİR. Tek bir alma işleminde iki işlem tipi birden yapılabilir."
+msgstr "Her bir alma işleminde hem yeni etkinlik (katılımcı) kayıtları EKLENEBİLİR hem de varolan kayıtlar GÜNCELLENEBİLİR. Tek bir alma işleminde iki işlem türü birden yapılabilir."
 
 #: templates/CRM/Event/Import/Form/DataSource.hlp
 msgid ""
@@ -3108,7 +3108,7 @@ msgid ""
 "Select 'Organization' or 'Household' if you are importing event "
 "participation data for contacts of that type. (NOTE: Some built-in contact "
 "types may not be enabled for your site.)"
-msgstr "Kurumsal ya da topluluk etkinlik katılımı verilerini alıyorsanız 'Kuruluş' ya da 'Hane Halkı' olarak seçin (Not: Sitenizde bazı iç kişi tipleri etkinleştirilmemiş olabilir)."
+msgstr "Kurumsal ya da topluluk etkinlik katılımı verilerini alıyorsanız 'Kuruluş' ya da 'Hane Halkı' olarak seçin (Not: Sitenizde bazı iç kişi türleri etkinleştirilmemiş olabilir)."
 
 #: templates/CRM/Event/Import/Form/Preview.tpl
 msgid ""
@@ -3383,14 +3383,14 @@ msgid ""
 "type=N - Specify a particular Event Type using the event_type_id value. (You"
 " can find these values by browsing the listing at Administer &raquo; "
 "CiviEvent &raquo; Event Types.)"
-msgstr "Belirli bir Etkinlik Tipini seçmek için N parametresi ile event_type_id değerini yazın (bu değerler Yönetim &raquo; CiviEvent &raquo; Etkinlik Tipleri bölümündeki listeden görülebilir)."
+msgstr "Belirli bir Etkinlik Türünü seçmek için N parametresi ile event_type_id değerini yazın (bu değerler Yönetim &raquo; CiviEvent &raquo; Etkinlik Türleri bölümündeki listeden görülebilir)."
 
 #: templates/CRM/Event/Page/ManageEvent.hlp
 msgid ""
 "EXAMPLE: Given the default event types, this URL will retrieve all events "
 "with start dates on or after January 1, 2007 whose event type is "
 "'Fundraiser':"
-msgstr "Örnek: Varsayılan etkinlik tipleri için bu İnternet adresi 1 Ocak 2007 tarihinden itibaren başlayan tüm 'Bağış Toplama' etkinliklerinin bilgileri alınır."
+msgstr "Örnek: Varsayılan etkinlik türleri için bu İnternet adresi 1 Ocak 2007 tarihinden itibaren başlayan tüm 'Bağış Toplama' etkinliklerinin bilgileri alınır."
 
 #: templates/CRM/Event/Page/ManageEvent.hlp
 msgid "HTML Listing"
@@ -3691,11 +3691,11 @@ msgstr "Etkinlikte yalnız %2 yer var gibi görünüyor ve %1 katılımcı kayde
 
 #: CRM/Event/Form/Registration.php
 msgid "Sorry, currently only a single space is available for this option."
-msgstr "Malesef şu anda bu seçenek için yalnız bir yer var."
+msgstr "Maalesef şu anda bu seçenek için yalnız bir yer var."
 
 #: CRM/Event/Form/Registration.php
 msgid "Sorry, currently only %1 spaces are available for this option."
-msgstr "Malesef, şu anda bu seçenek için yalnız %1 yer var."
+msgstr "Maalesef, şu anda bu seçenek için yalnız %1 yer var."
 
 #: CRM/Event/Form/SelfSvcTransfer.php CRM/Event/Form/SelfSvcUpdate.php
 msgid ""
@@ -3776,7 +3776,7 @@ msgstr "Birden çok katılımcıyı güncelleyin"
 msgid ""
 "File or Autocomplete-Select type field(s) in the selected profile are not "
 "supported for Update multiple participants."
-msgstr "Seçilmiş profil için Dosya ya da Otomatik Seçim alan tiplerinde birden çok katılımcının Güncellenmesi desteklenmiyor."
+msgstr "Seçilmiş profil için Dosya ya da Otomatik Seçim alan türlerinde birden çok katılımcının Güncellenmesi desteklenmiyor."
 
 #: CRM/Event/Task.php
 msgid "Delete participants from event"
